# citizenbrowser

./: .gitignore  BUILD.gn  package-lock.json  pushall.zsh
android_webview/: BUILD.gn
android_webview/browser/: aw_crash_keys.cc
base/trace_event/: builtin_categories.h
chrome/: BUILD.gn  chrome_paks.gni
chrome/android/: BUILD.gn
chrome/app/: chrome_command_ids.h  chrome_main_delegate.cc  generated_resources.grd
chrome/browser/: BUILD.gn  about_flags.cc  browser_features.cc  browser_features.h  browser_process.h  browser_process_impl.cc  browser_process_impl.h  chrome_browser_main.cc  chrome_content_browser_client.cc  chrome_content_browser_client.h  citizen_ui_browser_resources.grd  flag_descriptions.cc  flag_descriptions.h
chrome/browser/citizen_x/: BUILD.gn  DIR_METADATA  chrome_citizennotes_manager_delegate.cc  chrome_citizennotes_manager_delegate.h  chrome_citizennotes_session.cc  chrome_citizennotes_session.h  citizen_hub_model_unittest.cc  citizen_x_features.cc  citizen_x_features.h  citizen_x_model.cc  citizen_x_model.h  citizen_x_service.cc  citizen_x_service.h  citizen_x_service_factory.cc  citizen_x_service_factory.h  citizennotes_auto_opener.cc  citizennotes_auto_opener.h  citizennotes_browser_context_manager.cc  citizennotes_browser_context_manager.h  citizennotes_contents_resizing_strategy.cc  citizennotes_contents_resizing_strategy.h  citizennotes_dock_tile.cc  citizennotes_dock_tile.h  citizennotes_dock_tile_mac.mm  citizennotes_embedder_message_dispatcher.cc  citizennotes_embedder_message_dispatcher.h  citizennotes_eye_dropper.cc  citizennotes_eye_dropper.h  citizennotes_file_helper.cc  citizennotes_file_helper.h  citizennotes_file_system_indexer.cc  citizennotes_file_system_indexer.h  citizennotes_file_system_indexer_unittest.cc  citizennotes_file_watcher.cc  citizennotes_file_watcher.h  citizennotes_infobar_delegate.cc  citizennotes_infobar_delegate.h  citizennotes_settings.cc  citizennotes_settings.h  citizennotes_targets_ui.cc  (+22 more)
chrome/browser/citizen_x/device/: citizennotes_android_bridge.cc  citizennotes_android_bridge.h  citizennotes_android_bridge_browsertest.cc  citizennotes_device_discovery.cc  citizennotes_device_discovery.h  cnandroid_device_info_query.cc  cnandroid_device_manager.cc  cnandroid_device_manager.h  cnandroid_web_socket.cc  cncast_device_provider.cc  cncast_device_provider.h  cncast_device_provider_unittest.cc  cnport_forwarding_browsertest.cc  cnport_forwarding_controller.cc  cnport_forwarding_controller.h  cntcp_device_provider.cc  cntcp_device_provider.h
chrome/browser/citizen_x/device/adb/: cnadb_client_socket.cc  cnadb_client_socket.h  cnadb_client_socket_browsertest.cc  cnadb_device_provider.cc  cnadb_device_provider.h  mock_adb_server.cc  mock_adb_server.h
chrome/browser/citizen_x/device/usb/: cnandroid_rsa.cc  cnandroid_rsa.h  cnandroid_usb_browsertest.cc  cnandroid_usb_device.cc  cnandroid_usb_device.h  cnandroid_usb_socket.cc  cnandroid_usb_socket.h  cnusb_device_manager_helper.cc  cnusb_device_manager_helper.h  cnusb_device_provider.cc  cnusb_device_provider.h
chrome/browser/citizen_x/protocol/: cnautofill_handler.cc  cnautofill_handler.h  cnbrowser_handler.cc  cnbrowser_handler.h  cncast_handler.cc  cncast_handler.h  cncast_handler_unittest.cc  cnemulation_handler.cc  cnemulation_handler.h  cnpage_handler.cc  cnpage_handler.h  cnsecurity_handler.cc  cnsecurity_handler.h  cnstorage_handler.cc  cnstorage_handler.h  cnsystem_info_handler.cc  cnsystem_info_handler.h  cntarget_handler.cc  cntarget_handler.h  cnwindow_manager_handler.cc  cnwindow_manager_handler.h
chrome/common/: chrome_paths.cc  chrome_paths.h  chrome_switches.cc  chrome_switches.h  pref_names.h  webui_url_constants.cc  webui_url_constants.h
chrome/renderer/: worker_content_settings_client.cc
chrome/test/: BUILD.gn
chromecast/browser/: cast_content_browser_client.cc
components/: BUILD.gn  page_info_strings.grdp
components/citizennotes/citizennotes_pipe/: BUILD.gn  citizennotes_pipe.cc  citizennotes_pipe.h
components/keep_alive_registry/: keep_alive_types.cc  keep_alive_types.h
components/page_info/: page_info.cc
components/renderer_context_menu/: context_menu_content_type.cc
components/resources/: BUILD.gn  citizen_ui_components_resources.grd
components/ui_citizennotes/: BUILD.gn  DIR_METADATA  agent_util.cc  agent_util.h  citizennotes_base_agent.h  citizennotes_client.cc  citizennotes_client.h  citizennotes_export.h  citizennotes_server.cc  citizennotes_server.h  citizennotes_server_unittest.cc  connector_delegate.h  css_agent.cc  css_agent.h  dom_agent.cc  dom_agent.h  inspector_protocol_config.json  overlay_agent.cc  overlay_agent.h  page_agent.cc  page_agent.h  protocol.json  root_element.cc  root_element.h  switches.cc  switches.h  tracing_agent.cc  tracing_agent.h  ui_citizennotes_features.cc  ui_citizennotes_features.h  ui_element.cc  ui_element.h  ui_element_delegate.h  ui_element_unittest.cc
components/ui_citizennotes/views/: BUILD.gn  citizennotes_event_util.cc  citizennotes_event_util.h  citizennotes_server_util.cc  citizennotes_server_util.h  dom_agent_aura.cc  dom_agent_aura.h  dom_agent_mac.h  dom_agent_mac.mm  dom_agent_views.cc  dom_agent_views.h  element_utility.cc  element_utility.h  overlay_agent_aura.cc  overlay_agent_aura.h  overlay_agent_mac.h  overlay_agent_mac.mm  overlay_agent_views.cc  overlay_agent_views.h  page_agent_views.cc  page_agent_views.h  ui_element_with_metadata.cc  ui_element_with_metadata.h  view_element.cc  view_element.h  widget_element.cc  widget_element.h  window_element.cc  window_element.h
components/ui_devtools/: dom_agent.cc
components/url_formatter/: url_fixer.cc
content/browser/: BUILD.gn  storage_partition_impl.cc  storage_partition_impl.h  url_loader_factory_params_helper.cc  url_loader_factory_params_helper.h
content/common/: frame.mojom  navigation_client.mojom  render_message_filter.mojom  url_schemes.cc
content/renderer/: agent_scheduling_group.cc  navigation_client.cc  navigation_client.h  render_frame_impl.cc  render_frame_impl.h  (+2 more)
extensions/: BUILD.gn
(+494 files in other folders)
