# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chromeos/ui_mode.gni")
import("//extensions/buildflags/buildflags.gni")
import("//printing/buildflags/buildflags.gni")

if (!is_android) {
  import("//build/config/features.gni")
  import("//chrome/common/features.gni")
  import("//tools/grit/grit_rule.gni")
}

if (!is_android) {
  _inspector_protocol = "//third_party/inspector_protocol"
  import("$_inspector_protocol/inspector_protocol.gni")

  _protocol_generated = [
    "protocol/autofill.cc",
    "protocol/autofill.h",
    "protocol/browser.cc",
    "protocol/browser.h",
    "protocol/cast.cc",
    "protocol/cast.h",
    "protocol/emulation.cc",
    "protocol/emulation.h",
    "protocol/page.cc",
    "protocol/page.h",
    "protocol/protocol.h",
    "protocol/security.cc",
    "protocol/security.h",
    "protocol/storage.cc",
    "protocol/storage.h",
    "protocol/system_info.cc",
    "protocol/system_info.h",
    "protocol/target.cc",
    "protocol/target.h",
  ]

  if (is_chromeos_ash) {
    _protocol_generated += [
      "protocol/window_manager.cc",
      "protocol/window_manager.h",
    ]
  }

  _concatenated_protocol_path =
      "$root_gen_dir/chrome/browser/citizen_x/protocol.json"
  action("concatenate_protocols") {
    script = _inspector_protocol + "/concatenate_protocols.py"

    deps = [ "//third_party/blink/public/devtools_protocol:protocol_version" ]

    _blink_protocol_path =
        "$root_gen_dir/third_party/blink/public/devtools_protocol/protocol.json"
    inputs = [ _blink_protocol_path ]
    output_file = _concatenated_protocol_path
    outputs = [ output_file ]

    args = [ rebase_path(_blink_protocol_path, root_build_dir) ]
    if (is_chromeos_ash) {
      inputs += [ "cros_protocol.pdl" ]
      args += [ rebase_path("cros_protocol.pdl", root_build_dir) ]
    }

    args += [ rebase_path(output_file, root_build_dir) ]
  }

  inspector_protocol_generate("protocol_generated_sources") {
    inspector_protocol_dir = _inspector_protocol
    visibility = [ ":*" ]  # Only targets in this file can depend on this.
    deps = [ ":concatenate_protocols" ]
    out_dir = target_gen_dir
    config_file = "inspector_protocol_config.json"
    use_embedder_types = true

    protocol_path = rebase_path(_concatenated_protocol_path, root_build_dir)
    config_values = [ "protocol.path=$protocol_path" ]

    inputs = [
      _concatenated_protocol_path,
      "inspector_protocol_config.json",
    ]

    outputs = _protocol_generated
  }
}

static_library("citizen_x") {
  # Note: new sources and deps should be generally added in (!is_android) below.
  sources = []

  configs += [
    "//build/config/compiler:wexit_time_destructors",
    "//build/config:precompiled_headers",
  ]

  deps = [
    "//base",

    # To prevent circular GN dependencies, this target does not depend on
    # //chrome/browser:browser, even though it has a real build dependency on
    # it.  However, depending on the order in which this target and
    # //chrome/browser:browser are built it's possible that the connectors
    # proto header (which //chrome/browser:browser depends on) is not generated
    # yet causing devtools not to compile.  Adding this indirect dependency to
    # the proto to fix that.
    "//components/enterprise/common/proto:connectors_proto",

    # Similar bandaid as the above. Since we cannot depend on
    # //chrome/browser:browser, we include indirect dependencies here.
    "//chrome/browser/autofill:autofill",
    "//components/autofill/content/browser:browser",
    "//components/autofill/core/browser:browser",
    "//components/paint_preview/buildflags:buildflags",
    "//content/public/browser",
    "//net",
    "//services/metrics/public/cpp:ukm_builders",
    "//services/viz/privileged/mojom/compositing",
    "//third_party/blink/public:buildflags",
    "//ui/events:dom_keycode_converter",
  ]

  if (!is_android) {
    deps += [
      "//build:chromeos_buildflags",
      "//chrome:extra_resources",
      "//chrome:resources",
      "//chrome:strings",
      "//chrome/app/theme:theme_resources",
      "//chrome/browser:browser_process",
      "//chrome/browser/media/router:media_router_feature",
      "//chrome/browser/profiles:profile",
      "//chrome/browser/web_applications",
      "//chrome/common",
      "//components/guest_view/browser",
      "//components/infobars/content",
      "//components/infobars/core",
      "//components/javascript_dialogs",
      "//components/keep_alive_registry",
      "//components/keyed_service/content",
      "//components/language/core/browser",
      "//components/metrics/structured:structured_events",
      "//components/pref_registry",
      "//components/prefs",
      "//components/sessions",
      "//components/signin/public/identity_manager:identity_manager",
      "//components/sync/service",
      "//components/sync_preferences",
      "//components/viz/host",
      "//components/web_modal",
      "//components/zoom",
      "//net/server:http_server",
      "//skia",
      "//third_party/icu",
      "//third_party/leveldatabase",
      "//ui/base/cursor",
      "//ui/base/cursor/mojom:cursor_type",
      "//ui/shell_dialogs",
      "//ui/views/controls/webview",
    ]
    if (is_chromeos_ash) {
      deps += [ "//ash/constants" ]
    }
    sources += [
      "chrome_citizennotes_manager_delegate.cc",
      "chrome_citizennotes_manager_delegate.h",
      "chrome_citizennotes_session.cc",
      "chrome_citizennotes_session.h",
      "device/cnandroid_device_info_query.cc",
      "device/cnandroid_device_manager.cc",
      "device/cnandroid_device_manager.h",
      "device/cnandroid_web_socket.cc",
      "device/citizennotes_android_bridge.cc",
      "device/citizennotes_android_bridge.h",
      "device/citizennotes_device_discovery.cc",
      "device/citizennotes_device_discovery.h",
      "device/cnport_forwarding_controller.cc",
      "device/cnport_forwarding_controller.h",
      "device/cncast_device_provider.cc",
      "device/cncast_device_provider.h",
      "device/cntcp_device_provider.cc",
      "device/cntcp_device_provider.h",
      "device/usb/cnandroid_rsa.cc",
      "device/usb/cnandroid_rsa.h",
      "device/usb/cnandroid_usb_device.cc",
      "device/usb/cnandroid_usb_device.h",
      "device/usb/cnandroid_usb_socket.cc",
      "device/usb/cnandroid_usb_socket.h",
      "device/usb/cnusb_device_manager_helper.cc",
      "device/usb/cnusb_device_manager_helper.h",
      "device/usb/cnusb_device_provider.cc",
      "device/usb/cnusb_device_provider.h",
      "device/adb/cnadb_device_provider.cc",
      "device/adb/cnadb_device_provider.h",
      "device/adb/cnadb_client_socket.cc",
      "device/adb/cnadb_client_socket.h",
      "citizennotes_auto_opener.cc",
      "citizennotes_auto_opener.h",
      "citizennotes_browser_context_manager.cc",
      "citizennotes_browser_context_manager.h",
      "citizennotes_dock_tile.h",
      "citizennotes_eye_dropper.cc",
      "citizennotes_eye_dropper.h",
      "citizennotes_infobar_delegate.cc",
      "citizennotes_infobar_delegate.h",
      "citizennotes_settings.cc",
      "citizennotes_settings.h",
      "citizennotes_targets_ui.cc",
      "citizennotes_targets_ui.h",
      "citizennotes_toggle_action.cc",
      "citizennotes_toggle_action.h",
      "citizennotes_contents_resizing_strategy.cc",
      "citizennotes_contents_resizing_strategy.h",
      "citizennotes_embedder_message_dispatcher.cc",
      "citizennotes_embedder_message_dispatcher.h",
      "citizennotes_ui_bindings.cc",
      "citizennotes_ui_bindings.h",
      "citizennotes_window.cc",
      "citizennotes_window.h",
    ]
  }

  if (is_mac) {
    sources += [ "citizennotes_dock_tile_mac.mm" ]
  } else {
    sources += [ "citizennotes_dock_tile.cc" ]
  }
  if (!is_android) {
    deps += [
      ":protocol_generated_sources",
      "//chrome/app:command_ids",
      "//components/custom_handlers",
      "//components/media_router/browser",
      "//components/media_router/common/mojom:media_router",
      "//components/payments/content",
      "//components/privacy_sandbox/privacy_sandbox_attestations",
      "//components/security_state/content",
      "//components/subresource_filter/content/browser:browser",
      "//components/webapps/browser",
      "//third_party/inspector_protocol:crdtp",
    ]
    sources += [
      "protocol/cnautofill_handler.cc",
      "protocol/cnautofill_handler.h",
      "protocol/cnbrowser_handler.cc",
      "protocol/cnbrowser_handler.h",
      "protocol/cncast_handler.cc",
      "protocol/cncast_handler.h",
      "protocol/cnemulation_handler.cc",
      "protocol/cnemulation_handler.h",
      "protocol/cnpage_handler.cc",
      "protocol/cnpage_handler.h",
      "protocol/cnsecurity_handler.cc",
      "protocol/cnsecurity_handler.h",
      "protocol/cnstorage_handler.cc",
      "protocol/cnstorage_handler.h",
      "protocol/cnsystem_info_handler.cc",
      "protocol/cnsystem_info_handler.h",
      "protocol/cntarget_handler.cc",
      "protocol/cntarget_handler.h",
    ]
    if (is_chromeos_ash) {
      deps += [ "//ash" ]
      sources += [
        "protocol/window_manager_handler.cc",
        "protocol/window_manager_handler.h",
      ]
    }
    if (enable_printing) {
      deps += [
        "//components/printing/browser/headless",
        "//components/printing/browser/print_to_pdf",
      ]
    }
    sources += rebase_path(_protocol_generated, ".", target_gen_dir)
  }

  if (enable_extensions) {
    deps += [
      "//chrome/common/extensions/api",
      "//extensions/browser",
    ]
  }
}

static_library("test_support") {
  sources = []
  deps = []
  testonly = true

  if (!is_android) {
    deps += [
      ":citizen_x",
      "//base",
      "//chrome/browser",
      "//chrome/browser/ui",
      "//content/public/browser",
      "//content/test:test_support",
      "//net",
      "//net/traffic_annotation:test_support",
    ]

    sources += [
      "device/adb/mock_adb_server.cc",
      "device/adb/mock_adb_server.h",
      "devtools_window_testing.cc",
      "devtools_window_testing.h",
    ]

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
  }
}
