# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/c++/c++.gni")
import("//build/config/chrome_build.gni")
import("//build/config/compiler/compiler.gni")

static_library("citizennotes_pipe") {
  sources = [
    "citizennotes_pipe.cc",
    "citizennotes_pipe.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
  ]
}
